Stretch: Fixed button animation

--- a/index.css
+++ b/index.css
@@ -111,12 +111,14 @@ body {
 
 .calendar {
   max-height: 0;
+  min-height: 0;
+  border: 0;
   overflow: hidden;
   transition: max-height .8s cubic-bezier(0, 1, 0, 1) -.1s
 }
 .showMore .calendar {
   max-height: 9999px;
-  transition: max-height .8s cubic-bezier(0.5, 0, 1, 0) 0s
+  transition: max-height .8s cubic-bezier(0.5, 0, 1, 0) 0s;
 }
 
 .card img {
